--- a/src/pages/create-stat/create-stat.html
+++ b/src/pages/create-stat/create-stat.html
@@ -21,22 +21,33 @@
     <form [formGroup]="addStatForm" id="createStatForm">
         <ion-list>
             <ion-item>
-                <ion-label floating>Name</ion-label>
+                <ion-label floating>Name *</ion-label>
                 <ion-input name="name" type="text" formControlName="name"></ion-input>
             </ion-item>
+            <p class="helpText" *ngIf="addStatForm.get('name').touched && addStatForm.get('name').invalid">
+                * Required
+            </p>
             <ion-item>
-                <ion-label floating>Value</ion-label>
+                <ion-label floating>Value *</ion-label>
                 <ion-input name="value" type="number" formControlName="value"></ion-input>
             </ion-item>
-            <div *ngIf="statHasAMax === true; then AMAX else NOMAX"></div>
+            <p class="helpText" *ngIf="addStatForm.get('value').touched && addStatForm.get('value').invalid">
+                * Required
+            </p>
+            <div *ngIf="statHasAMax == true; then AMAX else NOMAX"></div>
             <ng-template #AMAX>
                 <ion-item>
-                    <ion-label floating>Maximum</ion-label>
+                    <ion-label floating>Maximum *</ion-label>
                     <ion-input name="maximum" type="number" formControlName="maximum"></ion-input>
                     <button (click)="toggleMax()" class="propertyToggle" ion-button icon-only default item-right>
                         <ion-icon name="close"></ion-icon>
                     </button>
                 </ion-item>
+                <p class="helpText" *ngIf="addStatForm.get('maximum').touched && addStatForm.get('maximum').invalid
+                    || addStatForm.get('maximum').touched && addStatForm.get('maximum').value == 0">
+                    <ion-icon name="alert"></ion-icon> To declare no maximum please click
+                    <ion-icon name="close"></ion-icon>
+                </p>
             </ng-template>
             <ng-template #NOMAX>
                 <ion-item-divider>
@@ -46,15 +57,19 @@
                     </button>
                 </ion-item-divider>
             </ng-template>
-            <div *ngIf="statHasAType === true; then ATYPE else NOTYPE"></div>
+            <div *ngIf="statHasAType == true; then ATYPE else NOTYPE"></div>
             <ng-template #ATYPE>
                 <ion-item>
-                    <ion-label floating>Type</ion-label>
+                    <ion-label floating>Type *</ion-label>
                     <ion-input name="type" type="text" formControlName="type"></ion-input>
                     <button (click)="toggleType()" class="propertyToggle" ion-button icon-only default item-right>
                         <ion-icon name="close"></ion-icon>
                     </button>
                 </ion-item>
+                <p class="helpText" *ngIf="addStatForm.get('type').touched && addStatForm.get('type').invalid">
+                    <ion-icon name="alert"></ion-icon> To declare no type please click
+                    <ion-icon name="close"></ion-icon>
+                </p>
             </ng-template>
             <ng-template #NOTYPE>
                 <ion-item-divider>
@@ -65,7 +80,7 @@
                 </ion-item-divider>
             </ng-template>
             <ion-item>
-                <ion-label floating>Interface</ion-label>
+                <ion-label floating>Interface *</ion-label>
                 <!-- <ion-input name="component" type="text" formControlName="component"></ion-input> -->
                 <ion-select interface="popover" name="component" formControlName="component">
                     <!-- unfortunately, for now, new components will be hand added -->
@@ -77,6 +92,12 @@
             <!-- <ion-item *ngIf="addStatForm.get('maximum').value != 0">
                 {{addStatForm.get('maximum').value}}
             </ion-item> -->
+            <p class="helpText" *ngIf="addStatForm.hasError('valueBelowZero')">
+                <ion-icon name="alert"></ion-icon> Values with a maximum must be greater than zero
+            </p>
+            <p class="helpText" *ngIf="addStatForm.hasError('valueAboveMax')">
+                <ion-icon name="alert"></ion-icon> Values must be less than their maximum
+            </p>
         </ion-list>
     </form>
 </ion-content>
