--- a/src/pages/create-stat/create-stat.html
+++ b/src/pages/create-stat/create-stat.html
@@ -22,14 +22,14 @@
         <ion-list>
             <ion-item>
                 <ion-label floating>Name *</ion-label>
-                <ion-input name="name" type="text" formControlName="name"></ion-input>
+                <ion-input name="name" tabindex="1" type="text" formControlName="name"></ion-input>
             </ion-item>
             <p class="helpText" *ngIf="addStatForm.get('name').touched && addStatForm.get('name').invalid">
                 * Required
             </p>
             <ion-item>
                 <ion-label floating>Value *</ion-label>
-                <ion-input name="value" type="number" formControlName="value"></ion-input>
+                <ion-input name="value" tabindex="2" type="number" formControlName="value"></ion-input>
             </ion-item>
             <p class="helpText" *ngIf="addStatForm.get('value').touched && addStatForm.get('value').invalid">
                 * Required
@@ -38,8 +38,8 @@
             <ng-template #AMAX>
                 <ion-item>
                     <ion-label floating>Maximum *</ion-label>
-                    <ion-input name="maximum" type="number" formControlName="maximum"></ion-input>
-                    <button (click)="toggleMax()" class="propertyToggle" ion-button icon-only default item-right>
+                    <ion-input name="maximum" tabindex="3" type="number" formControlName="maximum"></ion-input>
+                    <button (click)="toggleMax()" tabindex="0" class="propertyToggle" ion-button icon-only default item-right>
                         <ion-icon name="close"></ion-icon>
                     </button>
                 </ion-item>
@@ -52,7 +52,7 @@
             <ng-template #NOMAX>
                 <ion-item-divider>
                     <span>No Maximum</span>
-                    <button (click)="toggleMax()" class="propertyToggle" ion-button icon-only default item-right>
+                    <button (click)="toggleMax()" tabindex="0" class="propertyToggle" ion-button icon-only default item-right>
                         <ion-icon name="add"></ion-icon>
                     </button>
                 </ion-item-divider>
@@ -61,8 +61,8 @@
             <ng-template #ATYPE>
                 <ion-item>
                     <ion-label floating>Type *</ion-label>
-                    <ion-input name="type" type="text" formControlName="type"></ion-input>
-                    <button (click)="toggleType()" class="propertyToggle" ion-button icon-only default item-right>
+                    <ion-input name="type" type="text" tabindex="4" formControlName="type"></ion-input>
+                    <button (click)="toggleType()" tabindex="0" class="propertyToggle" ion-button icon-only default item-right>
                         <ion-icon name="close"></ion-icon>
                     </button>
                 </ion-item>
@@ -74,7 +74,7 @@
             <ng-template #NOTYPE>
                 <ion-item-divider>
                     <span>No Type</span>
-                    <button (click)="toggleType()" class="propertyToggle" ion-button icon-only default item-right>
+                    <button (click)="toggleType()" tabindex="0" class="propertyToggle" ion-button icon-only default item-right>
                         <ion-icon name="add"></ion-icon>
                     </button>
                 </ion-item-divider>
@@ -82,7 +82,7 @@
             <ion-item>
                 <ion-label floating>Interface *</ion-label>
                 <!-- <ion-input name="component" type="text" formControlName="component"></ion-input> -->
-                <ion-select interface="popover" name="component" formControlName="component">
+                <ion-select interface="popover" tabindex="0" name="component" formControlName="component">
                     <!-- unfortunately, for now, new components will be hand added -->
                     <ion-option value="form">Text</ion-option>
                     <ion-option value="button">Button</ion-option>
