--- a/src/pages/character-sheet/character-sheet.html
+++ b/src/pages/character-sheet/character-sheet.html
@@ -8,7 +8,7 @@
             <ion-title>{{ ( character | async )?.name }}</ion-title>
             <ion-buttons end>
                 <button ion-button icon-only (click)="toggleReorder()">
-                    <ion-icon name="reorder">
+                    <ion-icon name="customsort">
                     </ion-icon>
                 </button>
                 <button ion-button icon-only (click)="createStat()">
