--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -14,6 +14,7 @@
 <ion-content padding>
   <ion-slides>
       <ion-slide>
+          <div> Perhaps a cool logo here ?</div>
           <h3>CharSheet 1.0</h3>
           <div>
             Here is some text about who released this, and contact information.
