--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -21,4 +21,11 @@
           </div>
       </ion-slide>
   </ion-slides>
+  <ion-footer>
+      <ion-toolbar>
+          <ion-buttons end>
+              <button ion-button (click)="closeAbout()">{{closeText}}</button>
+          </ion-buttons>
+      </ion-toolbar>
+  </ion-footer>
 </ion-content>
