Add Thank You slide to Help Slides page

--- a/src/pages/help-slides/help-slides.html
+++ b/src/pages/help-slides/help-slides.html
@@ -81,6 +81,16 @@
                     <ion-icon name="add" isActive="false"></ion-icon> to add it.</p>
             </section>
         </ion-slide>
+
+        <ion-slide>
+            <!-- The Experience stat should be the input component-->
+            <h3>You're Done</h3>
+            <img src="" alt="">
+            <section>
+                <h4>Thank You</h4>
+                <p>We appreciate you trying {{appTitle}}</p>
+            </section>
+        </ion-slide>
     </ion-slides>
     <ion-footer>
         <ion-toolbar>
