Add slide images to project

--- a/src/pages/help-slides/help-slides.html
+++ b/src/pages/help-slides/help-slides.html
@@ -3,7 +3,9 @@
         <ion-slide>
             <h3>{{appTitle}}</h3>
             <!-- Icon Image ? -->
-            <img src="" alt="">
+            <div class="imgWrapper">
+                <img src="" alt="">
+            </div>
             <section>
                 <h4>Stop Wasting Notepads</h4>
                 <p>Easily track frequently-changing data related to your characters</p>
@@ -12,8 +14,10 @@
 
         <ion-slide>
             <h3>Characters</h3>
-            <!-- Icon Image ? -->
-            <img src="" alt="">
+            <!-- Picture of Stats Before Game -->
+            <div class="imgWrapper">
+                <img src="../../assets/assets/help-slides/slide3/stillPre.png" alt="">
+            </div>
             <section>
                 <h4>A List of Stats</h4>
                 <!-- Let's walk through an encounter to show how best to use this app -->
@@ -24,7 +28,9 @@
         <ion-slide>
             <!-- SVG Image of crossed weapons? -->
             <h3>Learning By Example</h3>
-            <img src="" alt="">
+            <div class="imgWrapper">
+                <img src="" alt="">
+            </div>
             <section>
                 <h4>A Contrived Encounter</h4>
                 <p>{{demoChar}} vs {{demoMob}}</p>
@@ -34,7 +40,9 @@
         <ion-slide>
             <!-- The Action stat should be one above minimum and use the + / - component -->
             <h3>Recording Change</h3>
-            <img src="" alt="">
+            <div class="imgWrapper">
+                <img src="../../assets/assets/help-slides/slide3/stillPre.png" alt="">
+            </div>
             <section>
                 <h4>Spending An Action</h4>
                 <p>{{demoChar}} swings at {{demoMob}} and misses! Select Actions and click
@@ -44,7 +52,9 @@
 
         <ion-slide>
             <h3>Removing Stats</h3>
-            <img src="" alt="">
+            <div class="imgWrapper">
+                <img src="../../assets/assets/help-slides/slide4/stillPre.png" alt="">
+            </div>
             <section>
                 <h4>Destroying Armor</h4>
                 <!-- Stats and Characters can be deleted this way -->
@@ -54,7 +64,9 @@
 
         <ion-slide>
             <h3>Resetting Stats</h3>
-            <img src="" alt="">
+            <div class="imgWrapper">
+                <img src="../../assets/assets/help-slides/slide5/stillPre.png" alt="">
+            </div>
             <section>
                 <h4>A New Round</h4>
                 <p>{{demoMob}} is doomed now! Slide Actions to the right to begin anew.</p>
@@ -64,7 +76,9 @@
         <ion-slide>
             <!-- The Mana stat should be the slider component-->
             <h3>Using A Slider</h3>
-            <img src="" alt="">
+            <div class="imgWrapper">
+                <img src="../../assets/assets/help-slides/slide6/stillPre.png" alt="">
+            </div>
             <section>
                 <h4>Casting A Spell</h4>
                 <p>{{demoChar}} shoots {{demoSpell}} at {{demoMob}}, a direct hit! Select Mana and drag it to record the cost.</p>
@@ -74,7 +88,9 @@
         <ion-slide>
             <!-- The Experience stat should be the input component-->
             <h3>Using The Keyboard</h3>
-            <img src="" alt="">
+            <div class="imgWrapper">
+                <img src="../../assets/assets/help-slides/slide7/stillPre.png" alt="">
+            </div>
             <section>
                 <h4>Gaining Experience</h4>
                 <p>{{demoSpell}} kills {{demoMob}}! Select Experience then type {{demoMobExp}} and click
@@ -83,9 +99,10 @@
         </ion-slide>
 
         <ion-slide>
-            <!-- The Experience stat should be the input component-->
             <h3>You're Done</h3>
-            <img src="" alt="">
+            <div class="imgWrapper">
+                <img src="" alt="">
+            </div>
             <section>
                 <h4>Thank You</h4>
                 <p>We appreciate you trying {{appTitle}}</p>
