Add 'swords' credit

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -24,9 +24,15 @@
           </svg>
           <h3>CharSheet 1.0</h3>
           <br />
-          <div>
-            "Character Profiles" icon by Yu luck, from <a href="http://www.thenounproject.com">the Noun Project</a>.
-          </div>
+          <div class="credit">
+            <div>
+              "Character Profiles" icon by Yu luck, from <a href="http://www.thenounproject.com">the Noun Project</a>.
+            </div>
+            <br />
+            <div>
+              "Swords" icon by Marek Polakovic, from <a href="http://www.thenounproject.com">the Noun Project</a>.
+            </div>  
+          </div>        
       </ion-slide>
   </ion-slides>
   <ion-footer>
