Change 'Character List' to 'Characters'

--- a/src/pages/character-list/character-list.html
+++ b/src/pages/character-list/character-list.html
@@ -9,7 +9,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Character List</ion-title>
+        <ion-title>Characters</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="addCharacter()">
                     <ion-icon name="add">
