Extract Charsheet icon to a file and use src attribute to reference it

--- a/src/pages/help-slides/help-slides.html
+++ b/src/pages/help-slides/help-slides.html
@@ -4,7 +4,7 @@
             <h3>{{appTitle}}</h3>
             <!-- Icon Image ? -->
             <div class="imgWrapper">
-                <img #imgs src="" alt="">
+                <img #imgs src="../../assets/assets/icon/charsheet.svg" alt="">
             </div>
             <section>
                 <h4>Stop Wasting Notepads</h4>
