Adjust help-slides css for use of svg images

--- a/src/pages/help-slides/help-slides.html
+++ b/src/pages/help-slides/help-slides.html
@@ -3,7 +3,7 @@
         <ion-slide>
             <h3>{{appTitle}}</h3>
             <!-- Icon Image ? -->
-            <div class="imgWrapper">
+            <div class="iconWrapper">
                 <img #imgs src="../../assets/assets/icon/charsheet.svg" alt="">
             </div>
             <section>
