Put version number in about page

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -15,7 +15,7 @@
     <ion-slides>
         <ion-slide>
             <img src="../../assets/assets/icon/charsheet.svg" class="logo">
-            <h3>Flexible Character Sheet</h3>
+            <h3>Flexible Character Sheet v1.0</h3>
             <br />
             <div class="credit">
                 <div>
