--- a/src/pages/create-character/create-character.html
+++ b/src/pages/create-character/create-character.html
@@ -1,15 +1,9 @@
-<!--
-  Generated template for the CreateCharacterPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
     <ion-navbar>
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>{{ title }}</ion-title>
+        <ion-title>Create A Character</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="addCharacter()" type="submit" form="addChar" type="submit" [disabled]="addCharForm.invalid">
                 <ion-icon name="create">
@@ -29,9 +23,3 @@
         </ion-list>
     </form>
 </ion-content>
-
-<!-- <ion-footer>
-    <ion-toolbar padding-left padding-right>
-        <button ion-button full (click)="addCharacter()" [disabled]="addCharForm.invalid" type="button">Create</button>
-    </ion-toolbar>
-</ion-footer> -->
