Change imgs srcs from relative to absolute paths
Changed for compatibility reasons

--- a/src/pages/help-slides/help-slides.html
+++ b/src/pages/help-slides/help-slides.html
@@ -4,7 +4,7 @@
             <h3>{{appTitle}}</h3>
             <!-- Icon Image ? -->
             <div class="iconWrapper">
-                <img #imgs src="../../assets/assets/icon/charsheet.svg" alt="">
+                <img #imgs src="assets/assets/icon/charsheet.svg" alt="">
             </div>
             <section>
                 <h4>Stop Wasting Notepads</h4>
@@ -16,7 +16,7 @@
             <h3>Characters</h3>
             <!-- Picture of Stats Before Game -->
             <div class="imgWrapper">
-                <img #imgs src="../../assets/assets/help-slides/slide3/stillPre.png" alt="">
+                <img #imgs src="assets/assets/help-slides/slide3/stillPre.png" alt="">
             </div>
             <section>
                 <h4>A List of Stats</h4>
@@ -29,7 +29,7 @@
             <!-- SVG Image of crossed weapons? -->
             <h3>Learning By Example</h3>
             <div class="iconWrapper">
-                <img #imgs src="../../assets/assets/icon/swords.svg" alt="">
+                <img #imgs src="assets/assets/icon/swords.svg" alt="">
             </div>
             <section>
                 <h4>A Contrived Encounter</h4>
@@ -41,7 +41,7 @@
             <!-- The Action stat should be one above minimum and use the + / - component -->
             <h3>Recording Change</h3>
             <div class="imgWrapper">
-                <img #imgs src="../../assets/assets/help-slides/slide3/stillPre.png" alt="">
+                <img #imgs src="assets/assets/help-slides/slide3/stillPre.png" alt="">
             </div>
             <section>
                 <h4>Spending An Action</h4>
@@ -53,7 +53,7 @@
         <ion-slide>
             <h3>Removing Stats</h3>
             <div class="imgWrapper">
-                <img #imgs src="../../assets/assets/help-slides/slide4/stillPre.png" alt="">
+                <img #imgs src="assets/assets/help-slides/slide4/stillPre.png" alt="">
             </div>
             <section>
                 <h4>Destroying Armor</h4>
@@ -65,7 +65,7 @@
         <ion-slide>
             <h3>Resetting Stats</h3>
             <div class="imgWrapper">
-                <img #imgs src="../../assets/assets/help-slides/slide5/stillPre.png" alt="">
+                <img #imgs src="assets/assets/help-slides/slide5/stillPre.png" alt="">
             </div>
             <section>
                 <h4>A New Round</h4>
@@ -77,7 +77,7 @@
             <!-- The Mana stat should be the slider component-->
             <h3>Using A Slider</h3>
             <div class="imgWrapper">
-                <img #imgs src="../../assets/assets/help-slides/slide6/stillPre.png" alt="">
+                <img #imgs src="assets/assets/help-slides/slide6/stillPre.png" alt="">
             </div>
             <section>
                 <h4>Casting A Spell</h4>
@@ -89,7 +89,7 @@
             <!-- The Experience stat should be the input component-->
             <h3>Using The Keyboard</h3>
             <div class="imgWrapper">
-                <img #imgs src="../../assets/assets/help-slides/slide7/stillPre.png" alt="">
+                <img #imgs src="assets/assets/help-slides/slide7/stillPre.png" alt="">
             </div>
             <section>
                 <h4>Gaining Experience</h4>
