--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,7 +8,7 @@
 <ion-content padding>
     <ion-slides>
         <ion-slide>
-            <img src="../../assets/assets/icon/charsheet.svg" class="logo">
+            <img src="assets/assets/icon/charsheet.svg" class="logo">
             <h3>Flexible Character Sheet v1.0</h3>
             <br />
             <div class="credit">
