--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -9,7 +9,7 @@
     <ion-slides>
         <ion-slide>
             <img src="assets/assets/icon/charsheet.svg" class="logo">
-            <h3>Flexible Character Sheet v1.0</h3>
+            <h3>{{appName}} v{{appVersion}}</h3>
             <br />
             <div class="credit">
                 <div>
@@ -25,7 +25,7 @@
     <ion-footer>
         <ion-toolbar>
             <ion-buttons end>
-                <button ion-button (click)="closeAbout()">{{closeText}}</button>
+                <button ion-button (click)="closeAbout()">Close</button>
             </ion-buttons>
         </ion-toolbar>
     </ion-footer>
