--- a/src/pages/help-slides/help-slides.html
+++ b/src/pages/help-slides/help-slides.html
@@ -1,7 +1,7 @@
 <ion-content padding>
     <ion-slides pager paginationType="progress" (ionSlideNextEnd)="slideIncrease()" (ionSlidePrevEnd)="slideDecrease()">
         <ion-slide>
-            <h3>{{appTitle}}</h3>
+            <h3>{{appName}}</h3>
             <!-- Icon Image ? -->
             <div class="iconWrapper">
                 <img #imgs src="assets/assets/icon/charsheet.svg" alt="">
@@ -106,7 +106,7 @@
             </div>
             <section>
                 <h4>Thank You!</h4>
-                <p>We appreciate you trying {{appTitle}}.</p>
+                <p>We appreciate you trying {{appName}}.</p>
             </section>
         </ion-slide>
     </ion-slides>
