Update Help Slides short description

--- a/src/pages/help-slides/help-slides.html
+++ b/src/pages/help-slides/help-slides.html
@@ -8,7 +8,7 @@
             </div>
             <section>
                 <h4>Stop Wasting Notepads</h4>
-                <p>Easily track frequently-changing data on your characters.</p>
+                <p>Easily track frequently-changing data on your Tabletop role-playing characters.</p>
             </section>
         </ion-slide>
 
